fixed log in form's spacing issues

--- a/skincare-routine-front-end/src/index.css
+++ b/skincare-routine-front-end/src/index.css
@@ -50,7 +50,8 @@ img {
   max-width: 95%;
 }
 
-.log-in-create-account {
+.log-in-create-account,
+.log-in-form {
   display: flex;
   flex-direction: column;
 }
